# aux_engine

./: .gitignore  CMakeLists.txt  GRAPHICS_MIGRATION_ROADMAP.md  GRAPHICS_RUNTIME_BACKEND_SPLIT.md  HANDLE_RENAME_PLAN.md  README.md  how_to_build.txt
docs/: awst.md  awst.txt  fget.md
example_apps/aux2/: CMakeLists.txt  audioplay.cpp  auxenv.cpp  console.h  main.cpp  utils.cpp  utils.h
include/auxe/: auxe.h
src/api/: echo.cpp  echo.h  interface.cpp
src/engine/: AuxFunc.cpp  AuxScope.h  AuxScope_exception.h  AuxeVersion.h.in  Built_in_Funcs.cpp  Cfunction.cpp  aux_classes.h  builtin_functions.h  class_definition.txt  compute_xflow.cpp  csignals.cpp  operators.cpp  psycon.l  psycon.tab.c  psycon.tab.h  psycon.y  psycon.yacc.h  psycon.yy.c  support.cpp  typecheck.cpp  typecheck.h  utils.cpp  xcope.cpp  xcope_exception.cpp  xcope_flow_shell.cpp  xcope_process.cpp  xcope_statics.cpp
src/func/: _awscli.cpp  _dir.cpp  _file.cpp  _file_wav.cpp  _file_wav.h  _matrix.cpp  _minmax.cpp  _setnextchan.cpp  _str2num.cpp  _tparamonly.cpp  and_or_sort.cpp  audio_play.cpp  cell_func.cpp  err_warning_throw.cpp  eval_include.cpp  fft.cpp  filt.cpp  functions_common.h  graphics_builtin.cpp  hilb_env.cpp  json.cpp  lr_aud_vec.cpp  movespec.cpp  noargs.cpp  objchecker.cpp  ones_z.cpp  pitchtime.cpp  play_builtin.cpp  printf.cpp  rand.cpp  record_builtin.cpp  rmsandothers.cpp  sharps.cpp  specialmath.cpp  sums.cpp  test.cpp  tone_fm.cpp  tsq.cpp  type_same.cpp  windowing.cpp
src/func/_func/: auxenv.json  find_replace_logs.txt  test.txt
src/iir/: cmplx.c  ellf.c  protos.h
test/: regression_debug_resume.cpp  regression_graphics_nogui.cpp  regression_record_callback.cpp
